syntax = "proto3";

package metrics;

option go_package = "github.com/atrian/devmetrics/proto";

message Gauge {
  string name = 1;
  double value = 2;
}

message Counter {
  string name = 1;
  int64 delta = 2;
}

message Metric {
  oneof type {
    Gauge gauge = 1;
    Counter counter = 2;
  }
}

message UpsertMetricsRequest {
  repeated Metric metrics = 1;
}

message UpsertMetricsResponse {
  enum ResponseStatus {
    OK = 0;
    ERROR = 1;
  }
  ResponseStatus status = 1;
}

service DevMetrics {
  rpc UpdateMetrics(UpsertMetricsRequest) returns (UpsertMetricsResponse);
}
